reworked view and js

--- a/src/WebViewsBundle/Resources/views/Pages/air.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/air.html.twig
@@ -18,14 +18,12 @@
             <div class="panel-heading">
                 <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#controllers-info">
-                        Controllers info</a>
+                        Controllers info
+                    </a>
                 </h4>
             </div>
             <div id="controllers-info" class="panel-collapse collapse">
-                <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                    minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                    commodo consequat.</div>
+
             </div>
         </div>
         <div class="panel panel-default">
@@ -36,17 +34,7 @@
                 </h4>
             </div>
             <div id="current-values" class="panel-collapse collapse in">
-                <table class = "table">
-                    <tr>
-                        <td>Tanmay</td>
-                        <td>Bangalore</td>
-                    </tr>
 
-                    <tr>
-                        <td>Sachin</td>
-                        <td>Mumbai</td>
-                    </tr>
-                </table>
             </div>
         </div>
         <div class="panel panel-default">
@@ -57,10 +45,7 @@
                 </h4>
             </div>
             <div id="controls" class="panel-collapse collapse">
-                <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                    minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                    commodo consequat.</div>
+
             </div>
         </div>
     </div>
