Modified view with js

--- a/src/WebViewsBundle/Resources/views/Pages/air.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/air.html.twig
@@ -23,7 +23,9 @@
                 </h4>
             </div>
             <div id="controllers-info" class="panel-collapse collapse">
+                <table class="table" id="controllers-info-table">
 
+                </table>
             </div>
         </div>
         <div class="panel panel-default">
@@ -34,7 +36,9 @@
                 </h4>
             </div>
             <div id="current-values" class="panel-collapse collapse in">
+                <table class="table" id="current-values-table">
 
+                </table>
             </div>
         </div>
         <div class="panel panel-default">
