Some controls. Need rework

--- a/src/WebViewsBundle/Resources/views/Pages/air.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/air.html.twig
@@ -49,7 +49,9 @@
                 </h4>
             </div>
             <div id="controls" class="panel-collapse collapse">
+                <table class="table" id="controls-table">
 
+                </table>
             </div>
         </div>
     </div>
