New table, data refactor

--- a/src/WebViewsBundle/Resources/views/Pages/air.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/air.html.twig
@@ -6,6 +6,10 @@
         var host = "{{ host }}";
         var port = "{{ port }}";
     </script>
+    
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.1/bootstrap-table.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.1/bootstrap-table.min.js"></script>
+    
     <script src="{{ asset('Chart.js') }}"></script>
     <link href="{{ asset('css/air.css') }}" rel="stylesheet" media="screen">
     <script src="{{ asset('js/air.js') }}"></script>
