--- a/src/WebViewsBundle/Resources/views/Pages/login.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/login.html.twig
@@ -53,6 +53,13 @@
               {% endif %}
 	      </form>
 
+        <a href="{{ path('hwi_oauth_service_redirect', {'service': 'facebook' }) }}">
+            <span>Facebook</span>
+        </a>
+        <a href="{{ path('hwi_oauth_service_redirect', {'service': 'google' }) }}">
+            <span>Google</span>
+        </a>
+
 	    </div> <!-- /container -->
 </body>
 
