--- a/src/WebViewsBundle/Resources/views/Pages/base.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/base.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+        <meta name="google-site-verification" content="UjIj0ur8XSLjubaHE0CDry5IrlD7ijASLuVLLbeSSBc" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet">
 
