Session for web-socket has been configured

--- a/src/WebViewsBundle/Resources/views/Pages/base.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/base.html.twig
@@ -21,6 +21,7 @@
 
         <meta name="google-site-verification" content="UjIj0ur8XSLjubaHE0CDry5IrlD7ijASLuVLLbeSSBc" />
 
+
     </head>
 
     <body>
@@ -34,7 +35,7 @@
                     <a href="/">Home</a>
                 </li>
                 <li>
-                    <a href="/air">Air</a>
+                    <a href="{{ path('webviews_info_airinfo') }}">Air</a>
                 </li>
                 <li>
                     <a href="/power">Power</a>
