--- a/src/WebViewsBundle/Resources/views/Pages/login.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/login.html.twig
@@ -56,8 +56,11 @@
         <a href="{{ path('hwi_oauth_service_redirect', {'service': 'facebook' }) }}">
             <span>Facebook</span>
         </a>
-        <a href="{{ path('hwi_oauth_service_redirect', {'service': 'google' }) }}">
+        <a href="{{ path('hwi_oauth_service_redirect', g{'service': 'google' }) }}">
             <span>Google</span>
+        </a>
+        <a href="{{ path('hwi_oauth_service_redirect', {'service': 'github' }) }}">
+            <span>Github</span>
         </a>
 
 	    </div> <!-- /container -->
