--- a/src/WebViewsBundle/Resources/views/Pages/login.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/login.html.twig
@@ -56,7 +56,7 @@
         <a href="{{ path('hwi_oauth_service_redirect', {'service': 'facebook' }) }}">
             <span>Facebook</span>
         </a>
-        <a href="{{ path('hwi_oauth_service_redirect', g{'service': 'google' }) }}">
+        <a href="{{ path('hwi_oauth_service_redirect', {'service': 'google' }) }}">
             <span>Google</span>
         </a>
         <a href="{{ path('hwi_oauth_service_redirect', {'service': 'github' }) }}">
