--- a/src/WebViewsBundle/Resources/views/Pages/login.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/login.html.twig
@@ -59,7 +59,7 @@
         <a href="{{ path('hwi_oauth_service_redirect', {'service': 'google' }) }}">
             <span>Google</span>
         </a>
-        <a href="{{ path('hwi_oauth_service_redirect', {'service': 'mgithub' }) }}">
+        <a href="{{ path('hwi_oauth_service_redirect', {'service': 'github' }) }}">
             <span>Github</span>
         </a>
 
