--- a/src/WebViewsBundle/Resources/views/Pages/base.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/base.html.twig
@@ -11,6 +11,10 @@
         <script src="{{ asset('bootstrap/js/bootstrap.min.js') }}"></script>
         <link href="{{ asset('css/sidebar.css') }}" rel="stylesheet" media="screen">
 
+        <link href="{{ asset('bootstrap/css/bootstrap.css') }}" rel="stylesheet">
+        <link href="{{ asset('bootstrap/css/font-awesome.min.css') }}" rel="stylesheet" >
+        <link href="{{ asset('bootstrap/css/bootstrap-social.css') }}" rel="stylesheet" >
+
         <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
