--- a/src/WebViewsBundle/Resources/views/Pages/login.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/login.html.twig
@@ -12,6 +12,9 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{{ asset('bootstrap/css/bootstrap.min.css') }}" rel="stylesheet" media="screen">
+    <link href="{{ asset('bootstrap/css/font-awesome.min.css') }}" rel="stylesheet" >
+    <link href="{{ asset('bootstrap/css/bootstrap-social.css') }}" rel="stylesheet" >
+
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 
@@ -42,28 +45,39 @@
 	        <input type="text" id="username" name="_username" class="form-control" placeholder="Email address" required autofocus>
 	        <label for="inputPassword" class="sr-only">Password</label>
 	        <input type="password" id="password" name="_password" class="form-control" placeholder="Password" required>
-	        <div class="checkbox">
-	          <label>
-	            <input type="checkbox" value="remember-me"> Remember me
-	          </label>
-	        </div>
 	        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
               {% if error %}
                   <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
               {% endif %}
 	      </form>
 
-        <a href="{{ path('hwi_oauth_service_redirect', {'service': 'facebook' }) }}">
-            <span>Facebook</span>
-        </a>
-        <a href="{{ path('hwi_oauth_service_redirect', {'service': 'google' }) }}">
-            <span>Google</span>
-        </a>
-        <a href="{{ path('hwi_oauth_service_redirect', {'service': 'github' }) }}">
-            <span>Github</span>
-        </a>
 
-	    </div> <!-- /container -->
+        <div class="row omb_row-sm-offset-3 omb_socialButtons">
+            <div class="col-md-4 center-block">
+                <a href="{{ path('hwi_oauth_service_redirect', {'service': 'facebook' }) }}"
+                   class="btn btn-block btn-social btn-facebook" onclick="_gaq.push(['_trackEvent', 'btn-social', 'click', 'btn-facebook']);">
+                    <span class="fa fa-facebook"></span> Sign in with Facebook
+                </a>
+            </div>
+            <div class="col-md-4 center-block">
+                <a href="{{ path('hwi_oauth_service_redirect', {'service': 'github' }) }}"
+                   class="btn btn-block btn-social btn-github" onclick="_gaq.push(['_trackEvent', 'btn-social', 'click', 'btn-github']);">
+                    <span class="fa fa-github"></span> Sign in with GitHub
+                </a>
+            </div>
+            <div class="col-md-4 center-block">
+                <a href="{{ path('hwi_oauth_service_redirect', {'service': 'google' }) }}"
+                   class="btn btn-block btn-social btn-google" onclick="_gaq.push(['_trackEvent', 'btn-social', 'click', 'btn-google']);">
+                    <span class="fa fa-google"></span> Sign in with Google
+                </a>
+            </div>
+        </div>
+
+
+    </div> <!-- /container -->
+
+
+
 </body>
 
 
